# 2048_rust_wasm

./: Cargo.toml  index.html
pkg/: package.js  package.json  package_bg.wasm
src/: game.rs  game_tests.rs  lib.rs
src/components/: mod.rs  tile.rs
