[package]
name = "game_2048"
version = "0.1.0"
authors = ["Stepan Naumov <stepan@dealtap.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.4.0"
wasm-bindgen = "0.2.50"
web-sys = "0.3.27"
rand = {version = "0.7.0", features = ["wasm-bindgen"]}
